# auctionQR-SmartContract

./: .gitignore  .pnp.cjs  Anchor.toml  README.md  devnetDeploy  package-lock.json  package.json  upgradeContract.sh
idls/devnet/: types.ts
idls/mainnet/: deployLog
programs/daily-auction/: Cargo.toml
programs/daily-auction/src/: contexts.rs  error.rs  event.rs  lib.rs  processor.rs  state.rs
scripts/: auctionGetData.ts  auctionReset.ts  bid.ts  cli.ts  end.ts  eventListener.ts  getData.ts  initialize.ts  start.ts
tests/: daily-auction.ts  test.ts
tools/: interfaces.ts  misc.ts  qrAuction.ts  settings.ts
